[package]
name = "async-task-ffi"
version = "4.1.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/raftario/async-task-ffi"
homepage = "https://github.com/raftario/async-task-ffi"
documentation = "https://docs.rs/async-task-ffi"
description = "Task abstraction for building executors"
keywords = ["futures", "task", "executor", "spawn", "ffi"]
categories = ["asynchronous", "concurrency", "no-std"]
readme = "README.md"

[features]
default = ["std"]
std = []

[dev-dependencies]
atomic-waker = "1.0.0"
easy-parallel = "3.1.0"
flume = { version = "0.10", default-features = false }
once_cell = "1.4.1"
smol = "1.0.1"
